--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -1,8 +1,14 @@
+  &::-webkit-scrollbar {
+    display: none; /* Chrome, Safari and Opera */
+  }   
 .hero{
   margin-top:10px;
   width: 100%;
   height: 80vh;
-  background: url('../../images/hero-image.jpg') no-repeat center center/cover;
+  background: var(--bacground-gradient),url('../../images/hero-image.jpg');
+  background-repeat:no-repeat;
+  background-position:center center;
+  background-size: cover;
 }
 .hero-cont{
   width: 70%;
@@ -209,7 +215,7 @@
   margin-top: 100px;
   height: 60vh;
   background:var(--bacground-gradient), url('../../images/food background image.jpg');
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -316,6 +322,13 @@
 }
 
 @media (min-width:300px) and (max-width:500px){
+  .hero{
+    height: 60vh;
+    background: var(--bacground-gradient),url('../../images/hero-image.jpg');
+    background-repeat:no-repeat;
+    background-position:bottom bottom;
+    background-size: cover;
+  }
   .hero-cont{
     height: 70%;
     justify-content:center;
@@ -344,8 +357,8 @@
      -ms-overflow-style: none;
   }
   .category-card .category-image{
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
   }
   .category-card h4{
     font-size: var(--small-text);
@@ -388,9 +401,12 @@
     display:none;
   }
   .explore-more{
-    margin-top: 100px;
+    width: 100%;
     height: 50vh;
-    display: grid;
+    background:var(--bacground-gradient), url('../../images/food background image.jpg');
+    background-position: bottom bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   .explore-cont{
     height: 80%;
@@ -417,7 +433,7 @@
     height: 10vh;
   }
   .testimonies-cont{
-    width: 80%;
+    width: 90%;
     padding: 0 10px;
     gap: 2rem;
     overflow-x: auto;
@@ -425,7 +441,7 @@
     -ms-overflow-style: none;
   }
   .testimony-card{
-    width: 270px;
+    width: 300px;
     height: 300px;
   }
   .testimony-card .testimony p{
@@ -433,6 +449,9 @@
   }
   .testimony-nav-btn{
     display: flex;
+  }
+  .CTA-cont h1{
+    width: 90%;
   }
 }
 @media (min-width:450px) and (max-width:500px){
